fix: can't collapse a circuit

--- a/src/components/market/CircuitDashboard/CircuitDashboard.scss
+++ b/src/components/market/CircuitDashboard/CircuitDashboard.scss
@@ -2,7 +2,7 @@
 @import 'src/styles/mixins/responsive';
 
 .circuitDashboard {
-  height: 614px;
+  height: 542px;
 
   &__toolbar {
     background-color: $c-base-darker;
